Construção de Compiladores/aulas/aula2/calculadora-01/calculadora.output
Terminais sem uso na gramática

    GE
    LE
    EQ
    NE


Estado 10 conflitos: 8 de deslocamento/redução


Gramática

    0 $accept: CALC $end

    1 CALC: ε
    2     | CALC exp EOL
    3     | CALC EOL
    4     | CALC QUIT EOL
    5     | error EOL

    6 exp: fator
    7    | exp ADD fator
    8    | exp SUB fator

    9 fator: termo
   10      | fator MUL termo
   11      | fator DIV termo
   12      | fator POW exp
   13      | fator FAT
   14      | fator QUO termo
   15      | fator MOD termo
   16      | fator ABS
   17      | fator REL fator

   18 termo: NUM
   19      | OPAR exp CPAR


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 5
    NUM (258) 18
    ADD (259) 7
    SUB (260) 8
    MUL (261) 10
    DIV (262) 11
    POW (263) 12
    FAT (264) 13
    QUO (265) 14
    MOD (266) 15
    ABS (267) 16
    GE (268)
    LE (269)
    EQ (270)
    NE (271)
    REL (272) 17
    EOL (273) 2 3 4 5
    OPAR (274) 19
    CPAR (275) 19
    QUIT (276) 4


Não terminais com as regras onde eles aparecem

    $accept (22)
        à esquerda: 0
    CALC (23)
        à esquerda: 1 2 3 4 5
        à direita: 0 2 3 4
    exp (24)
        à esquerda: 6 7 8
        à direita: 2 7 8 12 19
    fator (25)
        à esquerda: 9 10 11 12 13 14 15 16 17
        à direita: 6 7 8 10 11 12 13 14 15 16 17
    termo (26)
        à esquerda: 18 19
        à direita: 9 10 11 14 15


Estado 0

    0 $accept: • CALC $end

    error  deslocar, e ir ao estado 1

    $end  reduzir usando a regra 1 (CALC)
    NUM   reduzir usando a regra 1 (CALC)
    EOL   reduzir usando a regra 1 (CALC)
    OPAR  reduzir usando a regra 1 (CALC)
    QUIT  reduzir usando a regra 1 (CALC)

    CALC  ir ao estado 2


Estado 1

    5 CALC: error • EOL

    EOL  deslocar, e ir ao estado 3


Estado 2

    0 $accept: CALC • $end
    2 CALC: CALC • exp EOL
    3     | CALC • EOL
    4     | CALC • QUIT EOL

    $end  deslocar, e ir ao estado 4
    NUM   deslocar, e ir ao estado 5
    EOL   deslocar, e ir ao estado 6
    OPAR  deslocar, e ir ao estado 7
    QUIT  deslocar, e ir ao estado 8

    exp    ir ao estado 9
    fator  ir ao estado 10
    termo  ir ao estado 11


Estado 3

    5 CALC: error EOL •

    $padrão  reduzir usando a regra 5 (CALC)


Estado 4

    0 $accept: CALC $end •

    $padrão  aceitar


Estado 5

   18 termo: NUM •

    $padrão  reduzir usando a regra 18 (termo)


Estado 6

    3 CALC: CALC EOL •

    $padrão  reduzir usando a regra 3 (CALC)


Estado 7

   19 termo: OPAR • exp CPAR

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    exp    ir ao estado 12
    fator  ir ao estado 10
    termo  ir ao estado 11


Estado 8

    4 CALC: CALC QUIT • EOL

    EOL  deslocar, e ir ao estado 13


Estado 9

    2 CALC: CALC exp • EOL
    7 exp: exp • ADD fator
    8    | exp • SUB fator

    ADD  deslocar, e ir ao estado 14
    SUB  deslocar, e ir ao estado 15
    EOL  deslocar, e ir ao estado 16


Estado 10

    6 exp: fator •
   10 fator: fator • MUL termo
   11      | fator • DIV termo
   12      | fator • POW exp
   13      | fator • FAT
   14      | fator • QUO termo
   15      | fator • MOD termo
   16      | fator • ABS
   17      | fator • REL fator

    MUL  deslocar, e ir ao estado 17
    DIV  deslocar, e ir ao estado 18
    POW  deslocar, e ir ao estado 19
    FAT  deslocar, e ir ao estado 20
    QUO  deslocar, e ir ao estado 21
    MOD  deslocar, e ir ao estado 22
    ABS  deslocar, e ir ao estado 23
    REL  deslocar, e ir ao estado 24

    MUL      [reduzir usando a regra 6 (exp)]
    DIV      [reduzir usando a regra 6 (exp)]
    POW      [reduzir usando a regra 6 (exp)]
    FAT      [reduzir usando a regra 6 (exp)]
    QUO      [reduzir usando a regra 6 (exp)]
    MOD      [reduzir usando a regra 6 (exp)]
    ABS      [reduzir usando a regra 6 (exp)]
    REL      [reduzir usando a regra 6 (exp)]
    $padrão  reduzir usando a regra 6 (exp)


Estado 11

    9 fator: termo •

    $padrão  reduzir usando a regra 9 (fator)


Estado 12

    7 exp: exp • ADD fator
    8    | exp • SUB fator
   19 termo: OPAR exp • CPAR

    ADD   deslocar, e ir ao estado 14
    SUB   deslocar, e ir ao estado 15
    CPAR  deslocar, e ir ao estado 25


Estado 13

    4 CALC: CALC QUIT EOL •

    $padrão  reduzir usando a regra 4 (CALC)


Estado 14

    7 exp: exp ADD • fator

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    fator  ir ao estado 26
    termo  ir ao estado 11


Estado 15

    8 exp: exp SUB • fator

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    fator  ir ao estado 27
    termo  ir ao estado 11


Estado 16

    2 CALC: CALC exp EOL •

    $padrão  reduzir usando a regra 2 (CALC)


Estado 17

   10 fator: fator MUL • termo

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    termo  ir ao estado 28


Estado 18

   11 fator: fator DIV • termo

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    termo  ir ao estado 29


Estado 19

   12 fator: fator POW • exp

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    exp    ir ao estado 30
    fator  ir ao estado 10
    termo  ir ao estado 11


Estado 20

   13 fator: fator FAT •

    $padrão  reduzir usando a regra 13 (fator)


Estado 21

   14 fator: fator QUO • termo

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    termo  ir ao estado 31


Estado 22

   15 fator: fator MOD • termo

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    termo  ir ao estado 32


Estado 23

   16 fator: fator ABS •

    $padrão  reduzir usando a regra 16 (fator)


Estado 24

   17 fator: fator REL • fator

    NUM   deslocar, e ir ao estado 5
    OPAR  deslocar, e ir ao estado 7

    fator  ir ao estado 33
    termo  ir ao estado 11


Estado 25

   19 termo: OPAR exp CPAR •

    $padrão  reduzir usando a regra 19 (termo)


Estado 26

    7 exp: exp ADD fator •
   10 fator: fator • MUL termo
   11      | fator • DIV termo
   12      | fator • POW exp
   13      | fator • FAT
   14      | fator • QUO termo
   15      | fator • MOD termo
   16      | fator • ABS
   17      | fator • REL fator

    MUL  deslocar, e ir ao estado 17
    DIV  deslocar, e ir ao estado 18
    POW  deslocar, e ir ao estado 19
    FAT  deslocar, e ir ao estado 20
    QUO  deslocar, e ir ao estado 21
    MOD  deslocar, e ir ao estado 22
    ABS  deslocar, e ir ao estado 23
    REL  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 7 (exp)


Estado 27

    8 exp: exp SUB fator •
   10 fator: fator • MUL termo
   11      | fator • DIV termo
   12      | fator • POW exp
   13      | fator • FAT
   14      | fator • QUO termo
   15      | fator • MOD termo
   16      | fator • ABS
   17      | fator • REL fator

    MUL  deslocar, e ir ao estado 17
    DIV  deslocar, e ir ao estado 18
    POW  deslocar, e ir ao estado 19
    FAT  deslocar, e ir ao estado 20
    QUO  deslocar, e ir ao estado 21
    MOD  deslocar, e ir ao estado 22
    ABS  deslocar, e ir ao estado 23
    REL  deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 8 (exp)


Estado 28

   10 fator: fator MUL termo •

    $padrão  reduzir usando a regra 10 (fator)


Estado 29

   11 fator: fator DIV termo •

    $padrão  reduzir usando a regra 11 (fator)


Estado 30

    7 exp: exp • ADD fator
    8    | exp • SUB fator
   12 fator: fator POW exp •

    $padrão  reduzir usando a regra 12 (fator)


Estado 31

   14 fator: fator QUO termo •

    $padrão  reduzir usando a regra 14 (fator)


Estado 32

   15 fator: fator MOD termo •

    $padrão  reduzir usando a regra 15 (fator)


Estado 33

   10 fator: fator • MUL termo
   11      | fator • DIV termo
   12      | fator • POW exp
   13      | fator • FAT
   14      | fator • QUO termo
   15      | fator • MOD termo
   16      | fator • ABS
   17      | fator • REL fator
   17      | fator REL fator •

    $padrão  reduzir usando a regra 17 (fator)
